# muv

./: Cargo.toml  README.md  create-homebrew-tap.sh  homebrew-formula.rb.template
.cargo/: config.toml
.github/workflows/: release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  utils.rs
src/commands/: activate.rs  add.rs  create.rs  deactivate.rs  delete.rs  freeze.rs  home.rs  init.rs  install.rs  list.rs  mod.rs  path.rs  remove.rs  run.rs  uninstall.rs
tests/: README.md  assert_cmd_test.rs  cli_test.rs  commands_test.rs  error_test.rs  integration_test.rs  utils_test.rs
tests/commands/: create_test.rs  freeze_test.rs  home_test.rs  init_test.rs  install_test.rs  list_test.rs  mod.rs  path_test.rs  uninstall_test.rs
tests/common/: mod.rs
tests/mock/: mod.rs
tests/unit/: cli_test.rs  error_test.rs  mock_test.rs  mod.rs  utils_mock_test.rs  utils_test.rs
