[package]
name = "muv"
version = "0.1.2"
edition = "2024"
description = "Global environment management tool using uv"
authors = ["Vineel Kotapati <vineel7871@outlook.com>"]
license = "MIT"
repository = "https://github.com/vineel7871/muv"
documentation = "https://docs.rs/muv"
readme = "README.md"
keywords = ["python", "environment", "uv", "virtualenv"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
shellexpand = "3.1.0"
dirs = "5.0.1"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
thiserror = "1.0.50"

[dev-dependencies]
tempfile = "3.2"
assert_cmd = "2.0"
predicates = "3.0"